--- a/index9-directiva-crud.html
+++ b/index9-directiva-crud.html
@@ -14,42 +14,50 @@
     <!-- fim do css -->
 
     <!-- inicio do js -->
+    <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-aria/angular-aria.js"></script>
-    <script src="node_modules/angular-material/angular-material.js"></script>
     <script src="node_modules/angular-messages/angular-messages.js"></script>
-    <script src="node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="node_modules/angular-animate/angular-animate.js"></script>
-
+    <script src="node_modules/angular-material/angular-material.js"></script>
+    <script src="node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <script src="node_modules/angular-ui-grid/ui-grid.js"></script>
     <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="node_modules/oclazyload/dist/ocLazyLoad.js"></script>
+    <script src="node_modules/angular-local-storage/dist/angular-local-storage.js"></script>
+
     <script src="app/config/pd-app.js"></script>
+
     <script src="arquitetura/directivas/pd-input-text/pd-input-text-directive.js"></script>
     <script src="arquitetura/directivas/pd-crud/pd-crud.directive.js"></script>
-    <script src="app/controller/cadastro-carro.controller.js"></script>
-    <script src="app/controller/index-router.controller.js"></script>
+    <script src="app/config/pd-rotas.config.js"></script>
+    <script src="app/controller/index9-directiva-crud.controller.js"></script>
     <script src="app/service/alert.service.js"></script>
     <script src="app/filter/maiusculo.filter.js"></script>
-    <script src="node_modules/angular-ui-grid/ui-grid.js"></script>
-    <script src="app/config/pd-rotas.config.js"></script>
-    <script src="node_modules/oclazyload/dist/ocLazyLoad.js"></script>
-    <script src="app/controller/index.controller.js"></script>
     <!-- fim do js -->
 </head>
-<body ng-app="pdApp" class="container" ng-controller="CadastroCarroController as cc">
+<body ng-app="pdApp" class="container" ng-controller="CadastroCarroController as vm">
 
 <div class="row">
     <pd-crud titulo="Cadastro de Carros"
-            salvar="cc.salvar()"
-            excluir="cc.excluir()"
-            limpar="cc.limpar()">
+            salvar="vm.salvar()"
+            excluir="vm.excluir()"
+            limpar="vm.limpar()">
+
         <div class="row">
+            <pd-input-text ng-model="vm.entidade.nome"
+                           label="Nome"
+                           placeholder="Nome do Carro"
+                           colspan="3">
+            </pd-input-text>
 
+            <pd-input-text ng-model="vm.entidade.marca"
+                           label="Marca"
+                           placeholder="Marca do Carro"
+                           colspan="3">
+            </pd-input-text>
         </div>
-
-    <pd-input-text ng-model="ic.nome" label="Nome" placeholder="Nome"></pd-input-text>
-
     </pd-crud>
 </div>
-
 </body>
 </html>
