--- a/arquitetura/directivas/pd-select/pd-select.html
+++ b/arquitetura/directivas/pd-select/pd-select.html
@@ -1,48 +1,20 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Index 10 Directiva Panel</title>
-
-    <!--inicio do css -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-theme.css">
-    <link rel="stylesheet" href="node_modules/angular-toastr/dist/angular-toastr.css">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="node_modules/angular-ui-grid/ui-grid.css">
-    <link rel="stylesheet" href="node_modules/angular-material/angular-material.css">
-    <!-- fim do css -->
-
-    <!-- inicio do js -->
-    <script src="node_modules/angular/angular.js"></script>
-    <script src="node_modules/angular-aria/angular-aria.js"></script>
-    <script src="node_modules/angular-material/angular-material.js"></script>
-    <script src="node_modules/angular-messages/angular-messages.js"></script>
-    <script src="node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
-    <script src="node_modules/angular-animate/angular-animate.js"></script>
-
-    <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="app/config/pd-app.js"></script>
-    <script src="arquitetura/directivas/pd-input-text/pd-input-text-directive.js"></script>
-    <script src="arquitetura/directivas/pd-crud/pd-crud.directive.js"></script>
-    <script src="arquitetura/directivas/pd-panel/pd-panel.directive.js"></script>
-    <script src="app/controller/cadastro-carro.controller.js"></script>
-    <script src="app/controller/index-router.controller.js"></script>
-    <script src="app/service/alert.service.js"></script>
-    <script src="app/filter/maiusculo.filter.js"></script>
-    <script src="node_modules/angular-ui-grid/ui-grid.js"></script>
-    <script src="app/config/pd-rotas.config.js"></script>
-    <script src="node_modules/oclazyload/dist/ocLazyLoad.js"></script>
-    <script src="app/controller/index.controller.js"></script>
-    <script src="../../../node_modules/angular-local-storage/dist/angular-local-storage.js"></script>
-    <!-- fim do js -->
-</head>
-<body ng-app="pdApp" class="container" ng-controller="CadastroCarroController as cc">
-
-<div class="row">
-    <pd-panel></pd-panel>
-    <pd-panel></pd-panel>
+<div ng-class="classColspan">
+    <div class="form-group">
+        <label>
+            <label for="{{idInputSelect}}"
+                   ng-bind="label">
+            </label>
+            <i class="fa fa-asterisk text-danger"
+               ng-if="ngRequired">
+            </i>
+        </label>
+        <select class="form-control"
+                id="{{idInputSelect}}"
+                ng-model="ngModel">
+            <option ng-repeat="item in provider"
+                    ng-value="item[propriedadeValor]">
+                {{item[propriedadeDescricao]}}
+            </option>
+        </select>
+    </div>
 </div>
-
-</body>
-</html>
